# sof

./: configure.ac  simple-parse-ri  simple-parse-ri.c  x
app/boards/: imx8mp_evk_mimx8ml8_adsp.conf  imx8mp_evk_mimx8ml8_adsp.overlay
rimage/: elf.c  file_format.h  file_simple.c  manifest.c  rimage.c  rimage.h
scripts/: xtensa-build-all.sh  xtensa-build-zephyr.py
smex/: README.md
src/: channels  frames
src/audio/: CMakeLists.txt  Kconfig  component.c  dai-legacy.c  dai-zephyr.c  dai.c  host-zephyr.c  host.c  pipeline.c  simulated-dai-zephyr.c  simulated-host-zephyr.c
src/audio/post_process/: CMakeLists.txt  lib_api.c  post_process.c
src/debug/: panic.c
src/drivers/: CMakeLists.txt  Makefile.am
src/drivers/imx/: @!  CMakeLists.txt  Kconfig  Makefile.am  dummy-dma.c  edma.c  esai.c  interrupt-generic.c  interrupt.c  ipc.c  micfil.c  peripheral.c  pmc-ipc.c  sai.c  sdma.c  sdma.c.back  sdma.c.nou  timer.c
src/host/: schedule.c
src/idc/: idc.c
src/init/: init.c  t.c
src/ipc/: Makefile.am  dma-copy.c  handler.c  imx8qxp-ipc.c  ipc-host-ptable.c  ipc.c
src/lib/: alloc.c  clk.c  dai.c  dma.c  schedule.c  wait.c  work.c
src/platform/: Kconfig  Makefile.am
src/schedule/: dma_multi_chan_domain.c
src/tasks/: audio.c
src/trace/: dma-trace.c  trace.c
tools/: cmake.cross  cross-aarch64.cmake  exception_dump
tools/coredumper/: output.txt
tools/logger/: logger
tools/topology/: CMakeLists.txt  Makefile.am  sof-eq.m4  sof-imx8-compr.m4  sof-imx8mp-processing-wm8960.m4  sof-imx8mp-wm8960.m4  (+5 more)
zephyr/: CMakeLists.txt  Kconfig  wrapper.c
(+110 files in other folders)
